--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
 </head>
 
-<body class=font-Montserrat">
+<body class="">
   <div id="preloader">
     <div><span>Loading</span></div>
   </div>
@@ -239,7 +239,7 @@
         class="border-white border-[15px] shadow-md inline-block lg:w-[500px] relative lg:bottom-[180px] lg:left-[50px] lg:h-[600px] z-10 set-move-down"
         src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
       <img
-        class="absolute top-[430px] left-[290px] lg:w-[350px] shadow-md border-white border-[15px] z-20 set-move-to-right"
+        class="hidden lg:block  absolute top-[430px] left-[290px] lg:w-[350px] shadow-md border-white border-[15px] z-20 set-move-to-right"
         src="../public/imgs/FVG.jpg" alt="">
       <div
         class="bg-gray-100 relative shadow-md lg:top-[100px] text-start px-20 py-32 w-[450px] inline-block set-move-to-left">
