--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="mt-3 lg:mt-0 gap-4">
       <ul class="flex items-center flex-wrap lg:w-auto w-[170px] justify-center">
-        <li class="w-11 lg:w-9 mt-2 lg:mt-0 mr-1 hover:scale-110 transition ease-in-out duration-200">
+        <li class="w-11 lg:w-9 lg:mt-0 mr-1 hover:scale-110 transition ease-in-out duration-200">
           <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/">
             <svg fill="#3b5998 " viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
