--- a/public/index.html
+++ b/public/index.html
@@ -108,11 +108,12 @@
     <div
       class="hero  z-10 relative lg:mt-0 h-[500px] lg:h-[900px] bg-cover bg-right-bottom lg:bg-bottom  bg-[url('../public/imgs/fgg-min.jpg')] ">
       <div
-        class="h-[500px] lg:h-[900px] bg-gray-950 bg-opacity-25  py-12 px-8 text-white lg:py-52 lg:pl-72 lg:pr-large   ">
-        <h2 class="text-4xl lg:text-7xl lg:mb-8 set-text-move-down">Visit Our Inspirational Showrooms
+        class="h-[500px] lg:h-[900px] bg-gray-950 bg-opacity-25  py-12 px-8 text-white lg:py-52 md:pl-20 line-w xl:pl-72">
+        <h2 class="lg:w-[1200px] text-4xl lg:text-7xl lg:mb-8 set-text-move-down">Visit Our Inspirational Showrooms
           <span class="font-bold">Today</span>!
         </h2>
-        <p class=" lg:text-2xl tracking-tighter lg:mb-10 lg:leading-8 lg:pr-40 pr-10 mt-5 font-light italic">
+        <p
+          class="lg:w-[800px] lg:text-2xl tracking-tighter lg:mb-10 lg:leading-8 lg:pr-40 pr-10 mt-5 font-light italic">
           Explore our curated collections and experience the artistry of design firsthand. Our showrooms are
           meticulously
           crafted to inspire your creativity and ignite your passion for interior aesthetics.
@@ -123,7 +124,7 @@
         </button>
       </div>
     </div>
-    <section class="grid grid-cols-1 lg:grid-cols-2 lg:px-72 lg:py-8">
+    <section class="grid grid-cols-1 lg:grid-cols-2 xl:px-72 lg:py-8">
       <div class="py-8 px-8 lg:pr-16 lg:py-12 lg:pb-40">
         <h3 class="lg:mb-12 lg:pt-5 mb-5 text-xl font-bold lg:text-4xl set-text-move-down">
           ​About Our
@@ -149,7 +150,7 @@
         </div>
       </div>
     </section>
-    <section class="grid grid-cols-1 lg:grid-cols-2 lg:px-72 lg:py-8">
+    <section class="grid grid-cols-1 lg:grid-cols-2 xl:px-72 lg:py-8">
       <div class="py-8 px-8 bg-red relative flex justify-center items-center">
         <div class="z-10 ">
           <img class="shadow-md h-[450px] w-[300px] lg:w-[450px] lg:h-[550px] set-move-down" src="./imgs/gh.jpg" alt="">
@@ -319,7 +320,7 @@
       <button type="button" class="block ml-auto mr-auto mt-[-150px] z-50 relative lg:mt-16 lg:text-2xl border-4 border-[#b1c08b]  py-5 px-10 font-semibold hover:bg-[#b1c08b] hover:text-white transition
       duration-500 ease-in-out">LEARN MORE</button>
     </section>
-    <section class="relative lg:px-72 lg:py-10 ">
+    <section class="relative  xl:px-72 lg:py-10 ">
       <div class="absolute lg:top-[45%] left-0 bg-[#b1c08b] lg:h-60 z-0 w-full"></div>
       <div
         class="form inline-block px-10 py-20 shadow-2xl relative z-50 bg-white top-[100px] lg:left-[120px] w-[413px] lg:w-[550px] set-move-to-right">
