--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="build.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Prada Interior Design</title>
   <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -156,7 +156,7 @@
           <img class="shadow-md h-[450px] w-[300px] lg:w-[450px] lg:h-[550px] set-move-down" src="./imgs/gh.jpg" alt="">
         </div>
         <div
-          class="section-2-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[250px] lg:bottom-44 z-5 bg-[#d9d9d9] lg:w-[350px] lg:h-[450px] set-move-to-right">
+          class="section-2-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[250px] lg:top-[11rem] z-5 bg-[#d9d9d9] lg:w-[350px] lg:h-[450px] set-move-to-right">
         </div>
         <div
           class="section-2-right absolute bottom-36 left-40 w-[250px] h-[350px] lg:left-[230px] lg:top-36 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[400px] set-move-to-left">
