--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="build.css" />
   <title>Prada Interior Design</title>
   <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
     rel="stylesheet">
 </head>
 
-<body class="">
+<body>
   <div id="preloader">
     <div><span>Loading</span></div>
   </div>
@@ -82,7 +82,8 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
         </li>
-        <ul class="menu fixed  top-0 right-[-270px] ease-in-out duration-500 bg-white shadow-md  p-20 text-2xl">
+        <ul
+          class="menu fixed  top-0 right-0 translate-x-[270px] ease-in-out duration-500 bg-white shadow-md  p-20 text-2xl">
           <img class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
           <li>
             <img class="w-[20px] inline-block mb-1" src="./imgs/home.png" alt="">
