--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
       </div>
     </section>
     <section
-      class="bg-[url('../public/imgs/fgfgfg.jpg')] bg-cover bg-left lg:bg-center bg-no-repeat flex flex-col p-10 lg:px-56 lg:py-40 lg:h-[900px] ">
+      class="relative z-50 bg-[url('../public/imgs/fgfgfg.jpg')] bg-cover bg-left lg:bg-center bg-no-repeat flex flex-col p-10 lg:px-56 lg:py-40 lg:h-[900px] ">
       <p class="set-move-down lg:ml-auto lg:w-[840px] lg:mb-16 lg:text-4xl text-2xl font-bold">
         ​We design & deliver beautiful hotels,
         luxury
@@ -236,7 +236,7 @@
         </div>
       </div>
     </section>
-    <section class="text-center relative lg:px-[450px] lg:py-[100px]">
+    <section class="relative text-center lg:px-[450px] lg:py-[100px]">
       <img
         class="border-white border-[15px] shadow-md inline-block lg:w-[500px] relative lg:bottom-[180px] lg:left-[50px] lg:h-[600px] z-10 set-move-down"
         src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
