--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="build.css" />
   <title>Prada Interior Design</title>
-  <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./imgs/p.png" type="./image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -84,7 +84,7 @@
         </li>
         <ul
           class="menu fixed  top-0 right-0 translate-x-[270px] ease-in-out duration-500 bg-white shadow-md  p-20 text-2xl">
-          <img class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
+          <img class="close absolute cursor-pointer top-5 right-5 w-5" src="./imgs/close.png" alt="">
           <li>
             <img class="w-[20px] inline-block mb-1" src="./imgs/home.png" alt="">
             <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank"
