Update index.html - images paths fixes for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -218,19 +218,19 @@
         class="lg:ml-auto h[360px] lg:w-[840px] flex lg:flex-row flex-col justify-between items-center lg:py-0 py-5 gap-y-5 ">
         <div
           class="card flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 set-move-up">
-          <img class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
+          <img class="w-24 " src="./imgs/kitchen-table.png" alt="" srcset="">
           <p class="font-bold text-xl">PROJECTS</p>
           <p class="text-gray-500">Embarking on a Journey of Artistry, Innovation, and Excellence in Design.</p>
         </div>
         <div
           class="card flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 set-move-down">
-          <img class="w-24 " src="../public/imgs/interior-design.png" alt="" srcset="">
+          <img class="w-24 " src="./imgs/interior-design.png" alt="" srcset="">
           <p class="font-bold text-xl">GREATE DESIGN</p>
           <p class="text-gray-500">Setting the Standard for Creative Excellence, Innovation, and Elegance.</p>
         </div>
         <div
           class="card flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 set-move-up">
-          <img class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
+          <img class="w-24 " src="./imgs/kitchen-table.png" alt="" srcset="">
           <p class="font-bold text-xl">HOME DECOR</p>
           <p class="text-gray-500">Revitalizing Living Spaces with Elegance, Comfort, and Personalized Style.</p>
         </div>
@@ -239,10 +239,10 @@
     <section class="relative text-center lg:px-[450px] lg:py-[100px]">
       <img
         class="border-white border-[15px] shadow-md inline-block lg:w-[500px] relative lg:bottom-[180px] lg:left-[50px] lg:h-[600px] z-10 set-move-down"
-        src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
+        src="./imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
       <img
         class="hidden lg:block  absolute top-[430px] left-[290px] lg:w-[350px] shadow-md border-white border-[15px] z-20 set-move-to-right"
-        src="../public/imgs/FVG.jpg" alt="">
+        src="./imgs/FVG.jpg" alt="">
       <div
         class="bg-gray-100 relative shadow-md lg:top-[100px] text-start px-20 py-32 w-[450px] inline-block set-move-to-left">
         <p class="font-bold text-4xl mb-10">Interior Studio</p>
@@ -257,28 +257,28 @@
     </section>
     <section class="h-[450px]">
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full object-cover object-bottom  h-[450px]" src="../public/imgs/pexels-photo-4142982.jpg" alt=""
+        <img class="w-full object-cover object-bottom  h-[450px]" src="./imgs/pexels-photo-4142982.jpg" alt=""
           srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full object-cover object-bottom  h-[450px]" src="../public/imgs/pexels-photo-4207892.jpeg" alt=""
+        <img class="w-full object-cover object-bottom  h-[450px]" src="./imgs/pexels-photo-4207892.jpeg" alt=""
           srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full h-[450px] object-cover object-bottom" src="../public/imgs/pexels-photo-905198.jpeg" alt=""
+        <img class="w-full h-[450px] object-cover object-bottom" src="./imgs/pexels-photo-905198.jpeg" alt=""
           srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full  object-cover object-bottom h-[450px]" src="../public/imgs/1.jpeg" alt="" srcset="">
+        <img class="w-full  object-cover object-bottom h-[450px]" src="./imgs/1.jpeg" alt="" srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
