--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
   <!-- main -->
   <main class="overflow-x-hidden">
     <div
-      class="hero  z-10 relative lg:mt-0 h-[500px] lg:h-[900px] bg-cover bg-right-bottom lg:bg-bottom  bg-[url('../public/imgs/fgg-min.jpg')] ">
+      class="hero  z-10 relative lg:mt-0 h-[500px] lg:h-[900px] bg-cover bg-right-bottom lg:bg-bottom  bg-[url('./imgs/fgg-min.jpg')] ">
       <div
         class="h-[500px] lg:h-[900px] bg-gray-950 bg-opacity-25  py-12 px-8 text-white lg:py-52 md:pl-20 line-w xl:pl-72">
         <h2 class="lg:w-[1200px] text-4xl lg:text-7xl lg:mb-8 set-text-move-down">Visit Our Inspirational Showrooms
@@ -207,7 +207,7 @@
       </div>
     </section>
     <section
-      class="relative z-50 bg-[url('../public/imgs/fgfgfg.jpg')] bg-cover bg-left lg:bg-center bg-no-repeat flex flex-col p-10 lg:px-56 lg:py-40 lg:h-[900px] ">
+      class="relative z-50 bg-[url('./imgs/fgfgfg.jpg')] bg-cover bg-left lg:bg-center bg-no-repeat flex flex-col p-10 lg:px-56 lg:py-40 lg:h-[900px] ">
       <p class="set-move-down lg:ml-auto lg:w-[840px] lg:mb-16 lg:text-4xl text-2xl font-bold">
         ​We design & deliver beautiful hotels,
         luxury
